# AutoIPAAlign

./: CHANGELOG.md  CONTRIBUTIONS.md  Dockerfile  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: continuous_integration.yml  publish_to_pypi.yml
src/autoipaalign/web/: app.py
tests/: core_smoke_test.py  test_cli.py  test_textgrid_io.py
tests/data/: test1.TextGrid
