[project]
name = "autoipaalign"
version = "0.1.0"
description = "Automatic IPA alignment workspace with CLI, comparison tools, and web interface"
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["autoipaalign-core", "autoipaalign-web", "autoipaalign-compare"]


[tool.uv.sources]
autoipaalign-core = { workspace = true }
autoipaalign-web = { workspace = true }
autoipaalign-compare = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
