[project]
name = "autoipaalign"
version = "0.1.0"
description = "Automatic IPA alignment workspace with CLI, comparison tools, and web interface"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "autoipaalign-core"
]

[project.optional-dependencies]
app = [
    "autoipaalign-web"
]
compare = [
    "autoipaalign-compare"
]

[tool.uv.sources]
autoipaalign-core = { workspace = true }
autoipaalign-web = { workspace = true }
autoipaalign-compare = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
extend-exclude = ["tests/smoke_test.py"]

[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"